src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey3/InvalidUnexpectedTranslationKey3.php
<?php

namespace Invalid\UnexpectedTranslationKey3;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey3 extends ClarolinePlugin
{
    public function getDescriptionTranslationKey()
    {
        return '';
    }
}